<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/show_word_coordinator_layout">
    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:id="@+id/wordTextBox"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="28dp"
            android:layout_alignParentBottom="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:id="@+id/wordText"
                android:textSize="45sp"
                android:textAppearance="@style/TextAppearance.Design.Snackbar.Message"
                >
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:id="@+id/ocrText"
                android:textSize="24sp"
                android:textColor="@android:color/darker_gray"
                android:visibility="invisible"
                android:textAppearance="@style/TextAppearance.Design.Snackbar.Message">
            </TextView>


        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/wordTextBox"
            android:id="@+id/button_bar"
            >

            <ImageButton
                android:background="@drawable/ic_not_fav_24dp"
                android:layout_height="@dimen/basic_button_size"
                android:layout_width="@dimen/basic_button_size"
                android:layout_marginRight="@dimen/show_word_horizontal_margin"
                android:id="@+id/favorite"
                android:onClick="favoriteWord"
                android:contentDescription="@string/favorite_word"
                android:clickable="false"
                android:layout_alignParentRight="true"/>

            <ImageButton
                android:background="@drawable/ic_volume_max"
                android:layout_height="@dimen/basic_button_size"
                android:layout_width="@dimen/basic_button_size"
                android:layout_marginLeft="@dimen/show_word_horizontal_margin"
                android:id="@+id/playWord"
                android:contentDescription="@string/play_sound"
                android:onClick="playWord"
                />


        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/button_bar"
            android:layout_marginBottom="20dp"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/imageView4"
                android:layout_centerInParent="true"
                />

            <me.zhanghai.android.materialprogressbar.MaterialProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:id="@+id/show_word_image_loading"
                style="@style/Widget.MaterialProgressBar.ProgressBar.Large.NoPadding"/>

        </RelativeLayout>


    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
